# proxquery

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  proxquery.control  release-plz.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  docker-smoke.yml  edge-build.yml  promote.yml  release-build.yml  release.yml  test.yml
bench/: install_rum.sh  native_vs_proxquery.sql  proximity_bench.sql  pure_vs_extension.sql  report.sh  scaling_by_length.sql  tokenizer_vs_simple.sql
bench/large/: README.md  _corpus.sql  _queries.sql  _vocab.sql  doc_sizes.csv  inspect.sh  inspect.sql  large_bench.sql  run.sh
docs/: CONFIG_AWARE.md  DEVELOPMENT.md  MOTIVATION.md  PURE_SQL.md  RELEASING.md  TOKENIZER.md  TOKENIZER_SPEC.md  wordfrequency.info-top-5000.txt
packaging/: install.sh  smoke.sh
sql/: proxquery_cases.sql  proxquery_config_cases.sql  proxquery_diff_test.sql  proxquery_fuzz_test.sql  proxquery_match_cases.sql  proxquery_pure.sql  proxquery_pure_test.sql
src/: corpus.rs  dsl.rs  lib.rs  proximity.rs  support.rs  tokenizer.rs  tsvector.rs
tests/: analyzer_cases.md  parity_cases.md  tokenizer_cases.md
