[package]
name = "proxquery"
version = "0.1.0"
edition = "2021"
description = "Positional proximity predicates for tsvector full-text search"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.19.1"

[dev-dependencies]
pgrx-tests = "=0.19.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
