[package]
name = "proxquery"
version = "0.1.0"
edition = "2021"
description = "Positional proximity predicates for tsvector full-text search"
license = "MIT"
repository = "https://github.com/elemdiscovery/proxquery"
# This crate is a cdylib Postgres extension, not a consumable library: there is
# nothing to publish to crates.io. `publish = false` makes that explicit and
# tells release-plz to tag + cut a GitHub Release without ever calling
# `cargo publish`. See release-plz.toml and .github/workflows/release-plz.yml.
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.19.1"

[dev-dependencies]
pgrx-tests = "=0.19.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
